--- a/index.html
+++ b/index.html
@@ -18,17 +18,20 @@
             <div>
                 <h2>Tech<span class="gradient-text  ">wave</span></h2>
             </div>
-            <ul>
+            <ul class="hide">
                 <li><a href="">About</a></li>
                 <li><a href="">Episodes</a></li>
                 <li><a href="">Host</a></li>
             </ul>
-            <div>
+            <div class="hide">
                 <button class="btn">Subscribe</button>
+            </div>
+            <div class="display-2 hide-2">
+                <img src="assets/hamburger-menu.png" alt="">
             </div>
         </nav>
 
-        <section class="section-banner">
+        <section class="section-banner ">
             <div class="banner-section">
                 <div class="banner-section-img">
                     <img class="hero-circle" src="assets/hero-circle.png" alt="">
@@ -58,7 +61,7 @@
                 <p class="text-color margin-bt">Join thousands of young professionals and tech enthusiasts who start their day with TechWave.</p>
             </div>
             <div class="About-section-rank">
-                <div>
+                <div class="margin-bottom">
                     <h1>150k+</h1>
                     <p>Monthly Listeners</p>
                 </div>
