animation section complete only html and css full complete my Assignment

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             <div class="banner-section">
                 <div class="banner-section-img">
                     <img class="hero-circle" src="assets/hero-circle.png" alt="">
-                    <img class="banner-section-img-microphone" src="assets/microphone.png" alt="">
+                    <img class="banner-section-img-microphone microphone-an" src="assets/microphone.png" alt="">
                     <div class="new-section">New</div>
                 </div>
                  <div>
